--- a/project-receipt/src/main/resources/static/css/style.css
+++ b/project-receipt/src/main/resources/static/css/style.css
@@ -99,7 +99,7 @@ input[type="number"] {
 	-webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
 }
 
-.modal-frame {
-	
-	height: 500;
+.modal-style {
+	margin: 0;
+	border: none;
 }
