--- a/project-receipt/src/main/resources/static/css/style.css
+++ b/project-receipt/src/main/resources/static/css/style.css
@@ -103,3 +103,28 @@ input[type="number"] {
 	margin: 0;
 	border: none;
 }
+
+#success-foreground {
+	position: absolute;
+    opacity: 0.5;
+    transition: 1s all;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    width: 100vw;
+    height: 100vh;
+    /* position: relative;
+    opacity: 1;
+    transition: 1s all;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100%; */
+}
