--- a/project-receipt/src/main/resources/static/css/style.css
+++ b/project-receipt/src/main/resources/static/css/style.css
@@ -105,26 +105,44 @@ input[type="number"] {
 }
 
 #success-foreground {
-	position: absolute;
+	position: fixed;
     opacity: 0.5;
     transition: 1s all;
-    z-index: 10;
+    z-index: -1;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: transparent;
     color: white;
     width: 100vw;
     height: 100vh;
-    /* position: relative;
-    opacity: 1;
-    transition: 1s all;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 100%; */
+}
+
+#success-load:after {
+	-webkit-animation: spinAround 500ms infinite linear;
+	animation: spinAround 1000ms infinite linear;
+	border: 10px solid #1bd33f;
+	border-radius: 290486px;
+	border-right-color: transparent;
+	border-top-color: transparent;
+	content: "";
+	display: block;
+	height: 20em;
+	width: 20em;
+	left: calc(50% - (20em / 2));
+	top: calc(50% - (20em / 2));
+}
+
+#success-load {
+	top: -20%;
+	border: none;
+	background-color: transparent;
+}
+
+.fa-check {
+	color: #1bd33f;
+    font-size: 10em;
+	top: 16%;
+	left: 46%; 
+	position: absolute;
 }
