--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -60,13 +60,16 @@
 	 
        
     <section>
-    <div  id="success-foreground">
-    	testing
-    </div>
+	    <div id="success-foreground">
+	    	<div id="success-load" class="button is-loading hide"></div>
+	   		<div id="success-check" class="iconz fas fa-check hide"></div>
+	    </div>
+	    
+	    
     	<div id="modal" class="modal">
 			<div class="modal-background" data-modal-id="#modal"></div>
  			<div class="modal-content">
- 				<form id="testForm">
+ 				<form id="addressForm">
 					<div class="box" >
 		                <div class="field">
 		                    <label class="label">Street Address</label>
@@ -142,7 +145,7 @@
 				    	<div class="field has-addons">
 				      		<div class="control is-expanded">
 				        		<div class="select is-fullwidth">
-				          			<select form="headerForm" th:field="*{addressDummyText}">
+				          			<select form="headerForm" required="required" th:field="*{addressDummyText}">
 				            			
 				          			</select>
 				        		</div>
