--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -158,35 +158,39 @@
 					
 				</div>
 	
-                <div class="field is-horizontal is-grouped">
+                <div class="field is-horizontal">
 					<div class="field-label is-normal">
 				    	<label class="label">Payment type</label>
 				  	</div>
-				 	<div class="field is-narrow">
-				      	<div class="control">
-				        	<div class="select is-fullwidth">
-			         			<select form="headerForm" th:field="*{paymentType}">
-				           			<option value="Discover">Discover</option>
-				           			<option value="Chase Bank">Chase bank</option>
-				           			<option value="Chase Credit">Chase credit</option>
-			         			</select>
-				        	</div>
-				      	</div>
-		    		</div>
+				  	<div class="field-body">
+					 	<div class="field">
+					      	<div class="control is-expanded">
+					        	<div class="select is-fullwidth">
+				         			<select form="headerForm" th:field="*{paymentType}">
+					           			<option value="Discover">Discover</option>
+					           			<option value="Chase Bank">Chase bank</option>
+					           			<option value="Chase Credit">Chase credit</option>
+				         			</select>
+					        	</div>
+					      	</div>
+			    		</div>
 					
-					<div class="field-label is-normal">
-				    	<label class="label">Transaction type</label>
-				  	</div>
-			    	<div class="field is-narrow">
-			      		<div class="control">
-			        		<div class="select is-fullwidth">
-			          			<select>
-			            			<option>Grocery</option>
-			            			<option>Restaurant</option>
-			            			<option>Mall</option>
-			          			</select>
-			        		</div>
-			      		</div>
+					
+						<div class="field-label is-normal">
+					    	<label class="label">Transaction type</label>
+					  	</div>
+					  	
+				    	<div class="field">
+				      		<div class="control is-expanded">
+				        		<div class="select is-fullwidth">
+				          			<select>
+				            			<option>Grocery</option>
+				            			<option>Restaurant</option>
+				            			<option>Mall</option>
+				          			</select>
+				        		</div>
+				      		</div>
+			    		</div>
 		    		</div>
 				</div>	
 
