--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -66,6 +66,14 @@
 	    </div>
 	    
 	    
+	    
+	    
+	    
+	    
+									
+									
+									
+									
     	<div id="modal" class="modal">
 			<div class="modal-background" data-modal-id="#modal"></div>
  			<div class="modal-content">
@@ -129,9 +137,20 @@
 	                    <label class="label">Store Name</label>
                     </div>
                     <div class="field-body">
-                    	<div class="field">
+                    	<div class="field has-addons">
 		                    <div class="control is-expanded">
 		                        <input class="input" type="text" required="required" placeholder="Jimmy Johns" th:field="*{storeName}"/>
+		                    </div>
+		                    <div class="control">
+		                        <div class="select">
+				          			<select id="categorySelection">
+				            			<option value="F">Food</option>
+					           			<option value="A">Accessories</option>
+					           			<option value="B">Bills</option>
+					           			<option value="Q">Quality of Life</option>
+					           			<option value="S">Shopping/entertainment</option>
+				          			</select>
+				        		</div>
 		                    </div>
 	                    </div>
 	                </div>
@@ -211,11 +230,12 @@
 						        <th>Price</th>
 						        <th>Tax</th>
 						        <th></th>
+						        <th></th>
 					      	</tr>
 				      	</thead>
 				      	<tbody>
 				      	
-				      		<tr class="hide">
+				      		<!-- <tr class="hide">
 						    	<th id="srnos" style="text-align:right">2</th>
 								<td>
 									<input required="required" class="input" type="text" th:field="*{name}"/>
@@ -234,12 +254,52 @@
 									<input class="indiTax" type="hidden" th:field="*{tax}"/>
 									<a class="button taxBox iconz is-primary is-outlined is-inverted fas fa-usd"></a>
 								</td>
-								<!-- <td><input class="indiTax hide" type="number" th:field="*{tax}"/><span class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></span></td> -->
+								<td>
+									<div class="dropdown is-active cat-dd">
+										<div class="dropdown-trigger">
+											<a class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
+												<span>Category</span>
+												<span class="icon is-small">
+													<i class="iconz fas fa-angle-down" aria-hidden="true"></i>
+												</span>
+											</a>
+										</div>
+										<div class="dropdown-menu"  role="menu">
+											<div class="dropdown-content hide" >
+												<div class="dropdown-item">
+													<h4 class="title is-5" >Category</h4>
+													
+													<label class="radio">
+														<input type="radio" name="Fh"> Food </input>
+													</label>
+													<label class="radio">
+														<input type="radio" name="Ah"> Accessories </input>
+													</label>
+													<br/>
+													<label class="radio">
+														<input type="radio" name="Bh"> Bills </input>
+													</label>
+													<label class="radio">
+														<input type="radio" name="Qh"> Quality of Life </input>
+													</label>
+													<br/>
+													<label class="radio">
+														<input type="radio" name="Sh"> Shopping/entertainment </input>
+													</label>
+												</div>
+												<hr class="dropdown-divider"></hr>
+												<div class="dropdown-item">
+													<h4 class="title is-5" >Tag</h4>
+												</div>
+											</div>
+										</div>
+									</div>
+								</td>
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
-							</tr>
+							</tr> -->
 							
 							<tr class="control">
-								<th style="text-align:right">1</th>
+								<th class="sr-no" style="text-align:right">1</th>
 								<td>
 									<input required="required" class="input" type="text" th:field="*{name}"/>
 								</td>
@@ -257,7 +317,40 @@
 									<input class="indiTax" type="hidden" th:field="*{tax}"/>
 									<a class="button taxBox iconz is-primary is-outlined is-inverted fas fa-usd"></a>
 								</td>
-								<!-- <td><input class="indiTax hide" type="number" th:field="*{tax}"/><span class="icon is-medium taxBox"><i class="iconz fas fa-usd"></i></span></td> -->
+								<td>									
+									<div class="dropdown is-active category-dropdown">
+										<div class="dropdown-trigger">
+											<a class="button" aria-haspopup="true" aria-controls="dropdown-menu2">
+												<span>Category</span>
+												<span class="icon is-small">
+													<i class="iconz fas fa-angle-down" aria-hidden="true"></i>
+												</span>
+											</a>
+										</div>
+										<div class="dropdown-menu"  role="menu">
+											<div class="dropdown-content hide" >
+												<div class="dropdown-item ct-parent">
+													<h4 class="title is-5">Category</h4>
+													
+													<a class="tag is-danger categoryTag" id="catF">Food</a>
+													<a class="tag is-danger categoryTag" id="catA">Accessories</a>
+													<a class="tag is-danger categoryTag" id="catB">Bills</a>
+													<a class="tag is-danger categoryTag" id="catQ">Quality of Life</a>
+													<a class="tag is-danger categoryTag" id="catS">Shopping/entertainment</a>
+													
+													<input class="hide" type="text" th:field="*{category}"></input>
+													
+												</div>
+												<hr class="dropdown-divider"></hr>
+												<div class="dropdown-item ttParent">
+													<h4 class="title is-5" >Tag</h4>
+													
+													<input class="hide" type="text" th:field="*{tag}"></input>
+												</div>
+											</div>
+										</div>
+									</div>
+								</td>
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
 
@@ -272,6 +365,7 @@
 								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" th:field="*{total}"/></td>
 								<td></td>
 								<td></td>
+								<td></td>
 							</tr>
 							<!-- Tax -->
 							<tr>
@@ -280,6 +374,7 @@
 								<th></th>
 								<th style="text-align:right">Tax:</th>
 								<td><input id="taxVal" class="input" type="number" step="0.01" min="0" th:field="*{totalTax}"/></td>
+								<td></td>
 								<td></td>
 								<td></td>
 							</tr>
@@ -292,6 +387,7 @@
 								<td id="tipCell"><input id="tips" class="input" type="number" step="0.01" min="0" th:field="*{tips}"/></td>
 								<td></td>
 								<td></td>
+								<td></td>
 							</tr>
 							<!-- Grandtotal -->
 							<tr>
@@ -300,6 +396,7 @@
 								<th></th>
 								<th style="text-align:right">Grand Total:</th>
 								<td><div id="grandTotalText"></div><input id="grandTotalVal" class="input" type="hidden" th:field="*{grandTotal}"/></td>
+								<td></td>
 								<td></td>
 								<td></td>
 							</tr>
