--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -64,16 +64,7 @@
 	    	<div id="success-load" class="button is-loading hide"></div>
 	   		<div id="success-check" class="iconz fas fa-check hide"></div>
 	    </div>
-	    
-	    
-	    
-	    
-	    
-	    
-									
-									
-									
-									
+
     	<div id="modal" class="modal">
 			<div class="modal-background" data-modal-id="#modal"></div>
  			<div class="modal-content">
@@ -304,10 +295,10 @@
 									<input required="required" class="input" type="text" th:field="*{name}"/>
 								</td>
 								<td>
-									<input required="required" class="input qty" type="number" min="1" th:field="*{quantity}" placeholder="123"/>
+									<input required="required" class="input qty" type="number" min="1" th:field="*{quantity}"/>
 								</td>
 								<td>
-									<input required="required" class="input uPrice" type="number" step="0.01" min="0" th:field="*{unitPrice}" placeholder="123.00"/>
+									<input required="required" class="input uPrice" type="number" step="0.01" th:field="*{unitPrice}"/>
 								</td>
 								<td>
 									<div class="price"></div>
