Add 2 payment options

--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -180,6 +180,8 @@
 					           			<option value="Discover">Discover</option>
 					           			<option value="Chase Bank">Chase bank</option>
 					           			<option value="Chase Credit">Chase credit</option>
+					           			<option value="Bancfirst">Bancfirst</option>
+					           			<option value="Cash">Cash</option>
 				         			</select>
 					        	</div>
 					      	</div>
