--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -73,29 +73,29 @@
 		                <div class="field">
 		                    <label class="label">Street Address</label>
 		                    <div class="control">
-		                        <input class="input" id="address1" type="text" required="required" placeholder="13701 Midway Rd #120"/>
+		                        <input class="input" id="address1" type="text" required placeholder="13701 Midway Rd #120">
 		                    </div>
 		                </div>
 		
 		                <div class="field is-grouped">
 		                    <div class="control">
 		                        <label class="label">City</label>
-		                        <input class="input" id="city" type="text" required="required" placeholder="Farmers Branch"/>
+		                        <input class="input" id="city" type="text" required placeholder="Farmers Branch">
 		                    </div>
 		                    <div class="control">
 		                        <label class="label">Zip Code</label>
-		                        <input class="input" id="postalCode" type="text" required="required" placeholder="75244"/>
+		                        <input class="input" id="postalCode" type="text" required placeholder="75244">
 		                    </div>
 		                </div>
 		                
 		                <div class="field is-grouped">
 							<div class="control">
 		                        <label class="label">State</label>
-		                        <input class="input" id="state" type="text" required="required" value="Texas" placeholder="Texas"/>
+		                        <input class="input" id="state" type="text" required value="Texas" placeholder="Texas">
 		                    </div>
 		                    <div class="control">
 		                        <label class="label">Country</label>
-		                        <input class="input" id="country" type="text" required="required" value="US" placeholder="US"/>
+		                        <input class="input" id="country" type="text" required value="US" placeholder="US">
 		                    </div>
 						</div>
 						
@@ -109,7 +109,7 @@
 		</div>
 		
         <div class="container">        
-            <form class="form" id="headerForm" th:action="@{/receipt/process}" th:object="${request}" action="" method="POST">
+            <form class="form" id="headerForm">
 				<div class="field is-horizontal">
 					<div class="field-label">
 	                    <label class="label">Date</label>
@@ -117,7 +117,7 @@
                     <div class="field-body">
                     	<div class="field">
 		                    <div class="control is-expanded">
-		                        <input class="input date" type="text" name="date" required="required" placeholder="yyyy-MM-dd HH:mm" th:field="*{date}"/>
+		                        <input class="input date" type="text" name="date" required>
 		                    </div>
 	                    </div>
 	                </div>
@@ -130,7 +130,7 @@
                     <div class="field-body">
                     	<div class="field has-addons">
 		                    <div class="control is-expanded">
-		                        <input class="input" type="text" required="required" placeholder="Jimmy Johns" th:field="*{storeName}"/>
+		                        <input class="input" type="text" name="storeName" id="storeName" required>
 		                    </div>
 		                    <div class="control">
 		                        <div class="select">
@@ -155,13 +155,14 @@
 				    	<div class="field has-addons">
 				      		<div class="control is-expanded">
 				        		<div class="select is-fullwidth">
-				          			<select form="headerForm" required="required" th:field="*{addressDummyText}">
+				          			<select form="headerForm" name="addressList" required>
 				            			
 				          			</select>
+				          			<div class="hide" id="addressId" name="addressId"></div>
 				        		</div>
 				      		</div>
 				      		<div class="control">
-			    				<a class="button" id="addAddress" data-modal-id="#modal" disabled="disabled">Add</a>
+			    				<a class="button" id="addAddress" data-modal-id="#modal" disabled>Add</a>
 			    			</div>
 			    		</div>
 					</div>
@@ -176,7 +177,7 @@
 					 	<div class="field">
 					      	<div class="control is-expanded">
 					        	<div class="select is-fullwidth">
-				         			<select form="headerForm" th:field="*{paymentType}">
+				         			<select form="headerForm" name="paymentType">
 					           			<option value="Discover">Discover</option>
 					           			<option value="Chase Bank">Chase bank</option>
 					           			<option value="Chase Credit">Chase credit</option>
@@ -204,9 +205,9 @@
 		    		</div>
 				</div>	
 
-				<div class="control has-text-centered is-expanded">
+				<!-- <div class="control has-text-centered is-expanded">
 					<a class="button is-primary" id="toTable">Detail</a>
-				</div>
+				</div> -->
 
 				<div id="table">
             		<span class="table-add has-text-success is-medium"><i class="iconz fas fa-plus fa-2x"></i></span>
@@ -224,24 +225,24 @@
 						        <th></th>
 					      	</tr>
 				      	</thead>
-				      	<tbody>							
+				      	<tbody>
 							<tr class="control">
 								<th class="sr-no" style="text-align:right">1</th>
 								<td>
-									<input required="required" class="input" type="text" th:field="*{name}"/>
+									<input required class="input" type="text" name="name[]">
 								</td>
 								<td>
-									<input required="required" class="input qty" type="number" min="1" th:field="*{quantity}"/>
+									<input required class="input" type="number" name="quantity[]" min="1">
 								</td>
 								<td>
-									<input required="required" class="input uPrice" type="number" step="0.01" th:field="*{unitPrice}"/>
+									<input required class="input" type="number" name="unitPrice[]" step="0.01">
 								</td>
 								<td>
 									<div class="price"></div>
-									<input class="priceVal input" type="hidden" step="0.01" min="0" th:field="*{price}"/>
+									<input class="input" type="hidden" name="price[]" step="0.01">
 								</td>
 								<td>
-									<input class="indiTax" type="hidden" th:field="*{tax}"/>
+									<input type="hidden" name="tax[]">
 									<a class="button taxBox iconz is-primary is-outlined is-inverted fas fa-usd"></a>
 								</td>
 								<td>									
@@ -254,33 +255,32 @@
 												</span>
 											</a>
 										</div>
-										<div class="dropdown-menu"  role="menu">
+										<div class="dropdown-menu" role="menu">
 											<div class="dropdown-content hide" >
 												<div class="dropdown-item ct-parent">
 													<h4 class="title is-5">Category</h4>
 													
-													<a class="tag is-danger categoryTag" id="catF">Food</a><br/>
-													<a class="tag is-warning categoryTag" id="catB">Bills</a><br/>
-													<a class="tag categoryTag" id="catA">Accessories</a><br/>
-													<a class="tag is-success categoryTag" id="catQ">Quality of Life</a><br/>
-													<a class="tag is-info categoryTag" id="catS">Shopping/entertainment</a><br/>
+													<a class="tag is-danger categoryTag" id="catF">Food</a><br>
+													<a class="tag is-warning categoryTag" id="catB">Bills</a><br>
+													<a class="tag categoryTag" id="catA">Accessories</a><br>
+													<a class="tag is-success categoryTag" id="catQ">Quality of Life</a><br>
+													<a class="tag is-info categoryTag" id="catS">Shopping/entertainment</a><br>
 													
-													<input class="hide" type="text" th:field="*{category}"></input>
+													<input class="hide" type="text" name="category[]">
 													
 												</div>
-												<hr class="dropdown-divider"></hr>
+												<!-- <hr class="dropdown-divider">
 												<div class="dropdown-item ttParent">
 													<h4 class="title is-5" >Tag</h4>
 													
-													<input class="hide" type="text" th:field="*{tag}"></input>
-												</div>
+													<input class="hide" type="text" th:field="*{tag}">
+												</div> -->
 											</div>
 										</div>
 									</div>
 								</td>
 								<td><span class="table-remove icon has-text-danger is-medium"><i class="iconz fas fa-times fa-2x"></i></span></td>
 							</tr>
-
 						</tbody>
 						<tfoot>
 							<!-- Total -->
@@ -289,7 +289,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Total:</th>
-								<td><div id="dummyTotal"></div><input id="total" class="input" type="hidden" step="0.01" th:field="*{total}"/></td>
+								<td><div id="dummyTotal"></div><input id="total" name="total" class="input" type="hidden" step="0.01"></td>
 								<td></td>
 								<td></td>
 								<td></td>
@@ -300,7 +300,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tax:</th>
-								<td><input id="taxVal" class="input" type="number" step="0.01" min="0" th:field="*{totalTax}"/></td>
+								<td><input id="taxVal" name="totalTax" class="input" type="number" step="0.01" min="0"></td>
 								<td></td>
 								<td></td>
 								<td></td>
@@ -311,7 +311,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Tips:</th>
-								<td id="tipCell"><input id="tips" class="input" type="number" step="0.01" min="0" th:field="*{tips}"/></td>
+								<td id="tipCell"><input id="tips" name="tips" class="input" type="number" step="0.01" min="0"></td>
 								<td></td>
 								<td></td>
 								<td></td>
@@ -322,7 +322,7 @@
 								<th></th>
 								<th></th>
 								<th style="text-align:right">Grand Total:</th>
-								<td><div id="grandTotalText"></div><input id="grandTotalVal" class="input" type="hidden" th:field="*{grandTotal}"/></td>
+								<td><div id="grandTotalText"></div><input id="grandTotalVal" name="grandTotal" class="input" type="hidden"></td>
 								<td></td>
 								<td></td>
 								<td></td>
@@ -347,8 +347,9 @@
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js}"></script>
     <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
     
-    <!-- Custom JS -->    
+    <!-- Custom JS -->
     <script th:src="@{/script/script.js}"></script>
+    <script th:src="@{/script/event.js}"></script>
 </body>
 
 </html>
