--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -155,10 +155,10 @@
 				    	<div class="field has-addons">
 				      		<div class="control is-expanded">
 				        		<div class="select is-fullwidth">
-				          			<select form="headerForm" name="addressList" required>
+				          			<select form="headerForm" id="addressId" name="addressId" required>
 				            			
 				          			</select>
-				          			<div class="hide" id="addressId" name="addressId"></div>
+				          			<!-- <div class="hide" id="addressId" name="addressId"></div> -->
 				        		</div>
 				      		</div>
 				      		<div class="control">
