--- a/project-receipt/src/main/resources/templates/receipt/home.html
+++ b/project-receipt/src/main/resources/templates/receipt/home.html
@@ -59,7 +59,7 @@
 	</div>
 	 
        
-    <section>
+    <section id="main-body">
 	    <div id="success-foreground">
 	    	<div id="success-load" class="button is-loading hide"></div>
 	   		<div id="success-check" class="iconz fas fa-check hide"></div>
@@ -131,6 +131,7 @@
                     	<div class="field has-addons">
 		                    <div class="control is-expanded">
 		                        <input class="input" type="text" name="storeName" id="storeName" required>
+		                        <input class="hide" type="number" name="storeId" id="storeId">
 		                    </div>
 		                    <div class="control">
 		                        <div class="select">
